<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/review_order_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<include layout="@layout/toolbar_layout"/>
<!-- The main content view -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/review_order_content_frame"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:layout_marginTop="40dp"
    android:background="@drawable/glossy">
    
    <!-- Step Navigation -->
    <LinearLayout
        android:id="@+id/review_order_navigation_steps"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
    	android:background="@color/white"
    	android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:weightSum="1.0">
		   	<TextView
		   	    android:layout_height="wrap_content"
		   	    android:layout_width="0dp"
		   	    android:layout_weight="0.25"
		   		android:layout_marginTop="4dp"
		   		android:layout_marginBottom="4dp"
		   		android:gravity="center"
		   	    android:textSize="20sp"
		   	    android:textStyle="bold"
		   	    android:text="@string/cart_str"
		   	    android:textColor="@color/translucent_gray"
    			android:background="@color/transparent"/>
		   	<TextView
		   	    android:layout_height="wrap_content"
		   	    android:layout_width="0dp"
		   	    android:layout_weight="0.25"
		   		android:layout_marginTop="4dp"
		   		android:layout_marginBottom="4dp"
		   		android:gravity="center"
		   	    android:textSize="20sp"
		   	    android:textStyle="bold"
		   	    android:text="@string/shipping_str"
		   	    android:textColor="@color/translucent_gray"
    			android:background="@color/transparent"/>
		   	<TextView
		   	    android:layout_height="wrap_content"
		   	    android:layout_width="0dp"
		   	    android:layout_weight="0.25"
		   		android:layout_marginTop="4dp"
		   		android:layout_marginBottom="4dp"
		   		android:gravity="center"
		   	    android:textSize="20sp"
		   	    android:textStyle="bold"
		   	    android:text="@string/billing_str"
		   	    android:textColor="@color/translucent_gray"
    			android:background="@color/transparent"/>
		   	<TextView
		   	    android:layout_height="wrap_content"
		   	    android:layout_width="0dp"
		   	    android:layout_weight="0.25"
		   		android:layout_marginTop="4dp"
		   		android:layout_marginBottom="4dp"
		   		android:gravity="center"
		   	    android:textSize="20sp"
		   	    android:textStyle="bold"
		   	    android:text="@string/submit_str"
		   	    android:textColor="@color/yellow"
    			android:background="@color/transparent"/>
    </LinearLayout>
    
    <!-- Review Header -->
    <TextView
        android:id="@+id/review_order_header_tv"
        android:layout_below="@id/review_order_navigation_steps"
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:textSize="24sp"
   	    android:text="@string/review_order_str"
   	    android:textColor="@color/dark_blue"
   	    android:textStyle="bold"
  			android:background="@color/transparent"/>
    <!-- End Review Header -->
    
    <!-- Divider Bar -->
    <LinearLayout
        android:id="@+id/review_order_topmost_divider_bar"
        android:layout_below="@id/review_order_header_tv"
   	    android:layout_width="match_parent"
   	    android:layout_height="1dp"
        android:layout_marginTop="0dp"
   	    android:layout_marginBottom="0dp"
    	android:background="@color/light_blue"
    	android:orientation="horizontal">
    </LinearLayout>
    <!-- End Divider Bar -->
    
    <!-- Ship To-->
    <LinearLayout
        android:id="@+id/review_order_use_ship_to_addr_ll"
        android:layout_below="@id/review_order_topmost_divider_bar"
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
   	    android:layout_marginBottom="0dp"
    	android:background="@color/transparent"
    	android:orientation="horizontal"
	    android:weightSum="1.0">
	   	<TextView
	   	    android:layout_width="0dp"
	   	    android:layout_weight=".20"
	   	    android:layout_height="wrap_content"
   	    	android:layout_marginRight="5dp"
	   	    android:textSize="16sp"
	   	    android:text="@string/ship_to_str"
	   	    android:textColor="@color/dark_blue"
	   	    android:textStyle="bold"
   			android:background="@color/transparent"/>
	    <LinearLayout
	   	    android:layout_width="0dp"
	   	    android:layout_weight=".80"
	   	    android:layout_height="wrap_content"
	    	android:background="@color/transparent"
	    	android:orientation="vertical">
		   	<TextView
		   	    android:id="@+id/review_order_ship_to_addr_name"
		   	    android:layout_width="wrap_content"
		   	    android:layout_height="wrap_content"
		   	    android:textSize="12sp"
		   	    android:text="@string/name_str"
		   	    android:textColor="@color/black"
	   			android:background="@color/transparent"/>
		   	<TextView
		   	    android:id="@+id/review_order_ship_to_addr_street"
		   	    android:layout_width="wrap_content"
		   	    android:layout_height="wrap_content"
		   	    android:textSize="12sp"
		   	    android:text="@string/street_str"
		   	    android:textColor="@color/black"
	   			android:background="@color/transparent"/>
		   	<TextView
		   	    android:id="@+id/review_order_ship_to_addr_city"
		   	    android:layout_width="wrap_content"
		   	    android:layout_height="wrap_content"
		   	    android:textSize="12sp"
		   	    android:text="@string/city_str"
		   	    android:textColor="@color/black"
	   			android:background="@color/transparent"/>
	    </LinearLayout>
    </LinearLayout>
    <!-- End Ship To -->
    
    <!-- Divider Bar -->
    <LinearLayout
        android:id="@+id/review_order_middling_divider_bar"
        android:layout_below="@id/review_order_use_ship_to_addr_ll"
   	    android:layout_width="match_parent"
   	    android:layout_height="1dp"
        android:layout_marginTop="0dp"
   	    android:layout_marginBottom="0dp"
    	android:background="@color/light_blue"
    	android:orientation="horizontal">
    </LinearLayout>
    <!-- End Divider Bar -->
    
    <!-- Bill To-->
    <LinearLayout
        android:id="@+id/review_order_use_bill_to_addr_ll"
        android:layout_below="@id/review_order_middling_divider_bar"
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
   	    android:layout_marginBottom="0dp"
    	android:background="@color/transparent"
    	android:orientation="horizontal"
	    android:weightSum="1.0">
	   	<TextView
	   	    android:layout_width="0dp"
	   	    android:layout_weight=".20"
	   	    android:layout_height="wrap_content"
   	    	android:layout_marginRight="5dp"
	   	    android:textSize="16sp"
	   	    android:text="@string/bill_to_str"
	   	    android:textColor="@color/dark_blue"
	   	    android:textStyle="bold"
   			android:background="@color/transparent"/>
	    <LinearLayout
	   	    android:layout_width="0dp"
	   	    android:layout_weight=".80"
	   	    android:layout_height="wrap_content"
	    	android:background="@color/transparent"
	    	android:orientation="vertical">
		   	<TextView
		   	    android:id="@+id/review_order_bill_to_addr_name"
		   	    android:layout_width="wrap_content"
		   	    android:layout_height="wrap_content"
		   	    android:textSize="12sp"
		   	    android:text="@string/name_str"
		   	    android:textColor="@color/black"
	   			android:background="@color/transparent"/>
		   	<TextView
		   	    android:id="@+id/review_order_bill_to_addr_street"
		   	    android:layout_width="wrap_content"
		   	    android:layout_height="wrap_content"
		   	    android:textSize="12sp"
		   	    android:text="@string/street_str"
		   	    android:textColor="@color/black"
	   			android:background="@color/transparent"/>
		   	<TextView
		   	    android:id="@+id/review_order_bill_to_addr_city"
		   	    android:layout_width="wrap_content"
		   	    android:layout_height="wrap_content"
		   	    android:textSize="12sp"
		   	    android:text="@string/city_str"
		   	    android:textColor="@color/black"
	   			android:background="@color/transparent"/>
		   	<TextView
		   	    android:id="@+id/review_order_bill_to_addr_cc"
		   	    android:layout_width="wrap_content"
		   	    android:layout_height="wrap_content"
		   	    android:textSize="12sp"
		   	    android:text="@string/cc_str"
		   	    android:textColor="@color/black"
	   			android:background="@color/transparent"/>
	    </LinearLayout>
    </LinearLayout>
    <!-- End Bill To -->
    
    <!-- Divider Bar -->
    <LinearLayout
        android:id="@+id/review_order_top_divider_bar"
        android:layout_below="@id/review_order_use_bill_to_addr_ll"
   	    android:layout_width="match_parent"
   	    android:layout_height="1dp"
        android:layout_marginTop="0dp"
   	    android:layout_marginBottom="0dp"
    	android:background="@color/light_blue"
    	android:orientation="horizontal">
    </LinearLayout>
    <!-- End Divider Bar -->
    
    <!-- Items -->
    <LinearLayout
        android:id="@+id/review_order_header_bar"
        android:layout_below="@id/review_order_top_divider_bar"
   	    android:layout_width="match_parent"
   	    android:layout_height="30dp"
        android:layout_marginTop="1dp"
   	    android:layout_marginBottom="0dp"
    	android:background="@color/transparent"
    	android:orientation="horizontal"
      	android:layout_centerHorizontal="true">
	   	<TextView
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="wrap_content"
	   		android:layout_marginTop="4dp"
	   		android:layout_marginBottom="4dp"
	   	    android:textSize="16sp"
	   	    android:textStyle="bold"
	   	    android:text="@string/cart_items_str"
	   	    android:textColor="@color/dark_blue"
   			android:background="@color/transparent"/>
	</LinearLayout>    
   	<!-- End Title -->
            
    <LinearLayout
        android:layout_below="@id/review_order_header_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <!-- Cart Items -->
    <ListView
        android:id="@+id/review_order_list"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="#b5b5b5"
        android:dividerHeight="1dp"
        android:listSelector="@drawable/products_bg_selector"
    />
    <!-- End Cart Items -->
    
    <!-- Submit Order -->
    <LinearLayout
        android:id="@+id/review_order_bottom_ll"
        android:layout_alignParentBottom="true"
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
   	    android:layout_marginBottom="1dp"
    	android:background="@color/transparent"
    	android:orientation="vertical">
	    <!-- Divider Bar -->
	    <LinearLayout
	   	    android:layout_width="match_parent"
	   	    android:layout_height="3dp"
	        android:layout_marginTop="0dp"
	   	    android:layout_marginBottom="0dp"
	    	android:background="@color/light_blue"
	    	android:orientation="horizontal">
	    </LinearLayout>
	    <!-- End Divider Bar -->
	    <!-- Submit Order Button -->
		<LinearLayout
	   	    android:id="@+id/review_order_button_ll"
	   	    android:layout_width="match_parent"
	   	    android:layout_height="wrap_content"
	        android:layout_marginTop="1dp"
	   	    android:layout_marginBottom="1dp"
	    	android:background="@color/transparent"
	        android:layout_centerHorizontal="true"
	    	android:orientation="horizontal"
	        android:weightSum="1.0">
		   	<Button
		   	    android:id="@+id/review_order_prev_button"
		   	    android:background="@drawable/button_selector_yellow"
		   	    android:layout_width="0dp"
		   	    android:layout_weight=".40"
		   	    android:layout_height="40dp"
		   	    android:layout_marginTop="5dp"
		   	    android:layout_marginLeft="5dp"
			   	android:paddingLeft="10dp"
			   	android:paddingRight="10dp"
		   	    android:gravity="center"
		        android:layout_centerHorizontal="true"
		   	    android:onClick="doReviewOrderPrevButtonClick"
		   	    android:text="@string/prev_str"
		   	    android:textColor="@color/black"/>
		   	<EditText
		   	    android:layout_width="0dp"
		   	    android:layout_weight=".10"
		   	    android:layout_height="wrap_content"
		   	    android:layout_marginTop="1dp"
	   	    	android:layout_marginLeft="1dp"
	   	    	android:layout_marginRight="1dp"
	        	android:visibility="invisible"/>
		   	<Button
		   	    android:id="@+id/review_order_submit_button"
		   	    android:background="@drawable/button_selector_yellow"
		   	    android:layout_width="0dp"
		   	    android:layout_weight=".50"
		   	    android:layout_height="40dp"
		   	    android:layout_marginTop="5dp"
		   	    android:layout_marginRight="5dp"
			   	android:paddingLeft="10dp"
			   	android:paddingRight="10dp"
		   	    android:gravity="center"
		        android:layout_centerHorizontal="true"
		   	    android:onClick="doReviewOrderPlaceOrderButtonClick"
		   	    android:text="@string/place_order_str"
		   	    android:textColor="@color/black"/>
		</LinearLayout>
	    <!-- End Submit Button -->
	</LinearLayout>
	</LinearLayout>
	<!-- End Submit -->

    <ProgressBar
   	    android:id="@+id/review_order_progress_bar"
   	    style="?android:attr/progressBarStyleLarge"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_centerHorizontal="true"
   	    android:layout_centerVertical="true"
        android:visibility="gone"
   	/> 
</RelativeLayout>

<!-- Navigation Drawer -->

<ListView
    android:id="@+id/review_order_left_drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="#CC111111"
    android:choiceMode="singleChoice"
    android:divider="@android:color/transparent"
    android:dividerHeight="0dp"
    android:listSelector="@drawable/drawer_bg_selector" />

</android.support.v4.widget.DrawerLayout>