<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<include layout="@layout/toolbar_layout"/>
<!-- <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"> -->

<RelativeLayout
    android:id="@+id/new_user_content_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="50dp"
    android:background="@drawable/glossy">
    <TextView
   	    android:id="@+id/new_user_name_tv"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
   	    android:text="@string/username"                
  		android:clickable="false"
   	    android:textSize="20sp"
   	    android:textStyle="bold"
   	    android:textColor="@color/black"
  		android:background="@color/transparent"/>	
   	<EditText
   	    android:id="@+id/new_user_name_et"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_below="@+id/new_user_name_tv"
   	    android:layout_marginTop="1dp"
        android:layout_marginLeft="10dp"
   	    android:ems="10"                
    	android:clickable="false"
    	android:imeOptions="actionDone"/>
   	<TextView
   	    android:id="@+id/new_user_email_tv"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_below="@+id/new_user_name_et"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="10dp"
   	    android:text="@string/email"                
  		android:clickable="false"
   	    android:textSize="20sp"
   	    android:textStyle="bold"
   	    android:textColor="@color/black"
  		android:background="@color/transparent"/>	
   	<EditText
   	    android:id="@+id/new_user_email_et"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_below="@+id/new_user_email_tv"
   	    android:layout_marginTop="1dp"
        android:layout_marginLeft="10dp"
   	    android:ems="10"                
    	android:clickable="false"
    	android:imeOptions="actionDone"/>
    <TextView
   	    android:id="@+id/new_user_password_tv"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_below="@+id/new_user_email_et"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="10dp"
   	    android:text="@string/password"                
  		android:clickable="false"
   	    android:textSize="20sp"
   	    android:textStyle="bold"
   	    android:textColor="@color/black"
  		android:background="@color/transparent"/>	
   	<EditText
   	    android:id="@+id/new_user_password_et"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_below="@+id/new_user_password_tv"
   	    android:layout_marginTop="1dp"
        android:layout_marginLeft="10dp"
   	    android:ems="10"                
    	android:clickable="false"
    	android:imeOptions="actionDone"/>
    <TextView
   	    android:id="@+id/new_user_password_confirm_tv"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_below="@+id/new_user_password_et"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="10dp"
   	    android:text="@string/password_confirm"                
  		android:clickable="false"
   	    android:textSize="20sp"
   	    android:textStyle="bold"
   	    android:textColor="@color/black"
  		android:background="@color/transparent"/>
   	<EditText
   	    android:id="@+id/new_user_password_confirm_et"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_below="@+id/new_user_password_confirm_tv"
   	    android:layout_marginTop="1dp"
        android:layout_marginLeft="10dp"
   	    android:ems="10"                
    	android:clickable="false"
    	android:imeOptions="actionDone"/>
    <TextView
   	    android:id="@+id/new_user_icon_tv"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_below="@+id/new_user_password_confirm_et"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="10dp"
   	    android:text="@string/select_icon"                
  		android:clickable="false"
   	    android:textSize="20sp"
   	    android:textStyle="bold"
   	    android:textColor="@color/black"
  		android:background="@color/transparent"/>
    <!-- List of Avatars -->
    <ListView
        android:id="@+id/avatar_list"
   	    android:layout_below="@+id/new_user_icon_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:divider="#b5b5b5"
        android:dividerHeight="1dp"
        android:listSelector="@drawable/products_bg_selector"/>
    <!-- End List of Products -->
   	<Button
   	    android:id="@+id/new_user_btn"
   	    android:layout_width="wrap_content"
   	    android:layout_height="40dp"
   	    android:layout_below="@+id/avatar_list"
   	    android:layout_marginTop="5dp"
        android:layout_marginLeft="12dp"
   	    android:onClick="doRegisterClick"
   	    android:background="@drawable/button_selector_blue"
   	    android:text="@string/register_button_str"
   	    android:padding="5dp"
   	    android:textColor="@color/black"
   	/>
    <ProgressBar
   	    android:id="@+id/new_user_progress_bar"
   	    style="?android:attr/progressBarStyleLarge"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
   	    android:layout_centerHorizontal="true"
    	android:background="#00FFFFFF"
        android:visibility="invisible"
   	/>	
</RelativeLayout>
<!-- </ScrollView> -->
</android.support.v4.widget.DrawerLayout>